<resources>
    <string name="app_name">FinanceLord</string>

    <string name="transaction_title">Transaction</string>
    <string name="budget_title">Budget</string>
    <string name="spending_title">Spending</string>
    <string name="net_worth_title">Net Worth</string>

    <string name="transaction_description">Mange your transaction</string>
    <string name="budget_description">Create your budget</string>
    <string name="spending_description">View your monthly spending report</string>
    <string name="net_worth_description">Calculate your net worth</string>

    <!--    general-->

    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="net">Net</string>
    <string name="category">Category</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="current_time">Current Time</string>
    <string name="page_title">Page Title</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="commit">Commit</string>
    <string name="label_name">Label Name</string>
    <string name="items">Items</string>
    <string name="usage">Usage</string>
    <string name="total">Total</string>
    <string name="value">Value</string>
    <string name="comments">Comments</string>
    <string name="first_level">First Level</string>

    <string name="no_data_message">No Data</string>
    <string name="positive_symbol">+</string>
    <string name="negative_symbol">-</string>

    <!--    signs-->

    <string name="dollar_sign">" $"</string>
    <string name="slash">" / "</string>
    <string name="algebra_sign">"+ - "</string>
    <string name="tilde_sign">" ~ "</string>

    <!--    budget add & edit activity-->

    <string name="new_budget">New Budget</string>
    <string name="budget_name_error_message">Please pick or enter a name</string>
    <string name="budget_value_error_message">Please enter a value</string>
    <string name="budget_start_date_error_message">Please pick a start date</string>
    <string name="budget_end_date_error_message">Please pick a end date</string>
    <string name="date_order_error_message">Please enter a valid start date and end date</string>

    <!--    transaction add fragments-->

    <string name="expenses_name">Expenses</string>
    <string name="revenues_name">Revenues</string>
    <string name="new_transaction">New Transaction</string>

    <string name="transaction_name_error_message">Please enter a name</string>
    <string name="transaction_value_error_message">Please enter a value</string>
    <string name="transaction_date_error_message">Please enter a date</string>
    <string name="transaction_category_error_message">Please pick a category</string>

    <!--    net worth categories' name-->

    <string name="net_worth">Net Worth</string>

    <string name="assets_name">Assets</string>
    <string name="liabilities_name">Liabilities</string>

    <string name="total_assets_name">Total Assets</string>

    <string name="liquid_assets_name">Liquid Assets</string>
    <string name="invested_assets_name">Invested Assets</string>
    <string name="personal_assets_name">Personal Assets</string>
    <string name="taxable_accounts_name">Taxable Accounts</string>
    <string name="retirement_accounts_name">Retirement Accounts</string>
    <string name="ownership_interest_name">Ownership Interests</string>


    <string name="checking_accounts_name">Checking Accounts</string>
    <string name="savings_accounts_name">Savings Accounts</string>
    <string name="money_market_accounts_name">Money Market Accounts</string>
    <string name="savings_bonds_name">Savings Bonds</string>
    <string name="cds_name">CD\'s</string>
    <string name="life_insurance_name">Cash value of life insurance</string>
    <string name="brokerage_name">Brokerage</string>
    <string name="others_name">Others</string>
    <string name="ira_name">IRA</string>
    <string name="roth_ira_name">Roth_IRA</string>
    <string name="retirement_savings_plan_name">401k</string>
    <string name="SEP_IRA_name">SEP_IRA</string>
    <string name="pension__name">Pension</string>
    <string name="annuity_name">Annuity</string>
    <string name="keogh_name">Keogh or Other Plan</string>
    <string name="real_estate_name">Real Estate</string>
    <string name="sole_proprietorship_name">Sole Proprietorship</string>
    <string name="partnership_name">Partnership</string>
    <string name="limited_liability_company">Limited liability company</string>
    <string name="c_corporation_name">C Corporation</string>
    <string name="s_corporation_name">S Corporation</string>
    <string name="principal_home_name">Principal Home</string>
    <string name="vacation_home_name">Vacation Home</string>
    <string name="vehicles_name">Vehicles</string>
    <string name="home_furnishings_name">Home Furnishings</string>
    <string name="collections_name">Collections</string>
    <string name="luxury_goods_name">Luxury Goods</string>
    <string name="other_name">Other</string>

    <string name="total_liabilities_name">Total Liabilities</string>

    <string name="short_term_liabilities_name">Short Term Liabilities</string>
    <string name="long_term_liabilities_name">Long Term Liabilities</string>
    <string name="credit_card_balances_name">Credit Card Balances</string>
    <string name="income_tax_name">Estimated Income Tax Owed</string>
    <string name="outstanding_bills_name">Other Outstanding Bills</string>
    <string name="home_mortgage_name">Home mortgage</string>
    <string name="home_equity_loan_name">Home Equity Loan</string>
    <string name="mortgage_name">Mortgage on rental properties</string>
    <string name="car_loans_name">Car Loans</string>
    <string name="student_loans_name">Student Loans</string>
    <string name="total_business_loans_name">Total Business Loans</string>
    <string name="life_insurance_policy_loans_name">Life Insurance Policy Loans</string>
    <string name="other_long_time_debt_name">Other Long Time Debt</string>

    <string name="total_net_worth">Total Net Worth</string>

    <string name="housing_name">Housing</string>
    <string name="transportation_name">Transportation</string>
    <string name="food_name">Food</string>
    <string name="utilities_name">Utilities</string>
    <string name="health_care_name">Health Care</string>
    <string name="insurance_name">Insurance</string>
    <string name="household_supplies_name">Household Supplies</string>
    <string name="personal_spending_name">Personal Spending</string>
    <string name="debt_name">Debt</string>
    <string name="education_name">Education</string>
    <string name="savings_name">Savings</string>
    <string name="entertainment_name">Entertainment</string>
    <string name="salary_name">Salary</string>
    <string name="dividend_name">Dividend</string>
    <string name="rent_name">Rent</string>
    <string name="interests_name">Interests</string>

    <string name="image_of_assets">Image of assets</string>
    <string name="title_activity_net_worth_edit_reports">NetWorthEditReportsActivity</string>
    <string name="tab_assets_text">Assets</string>
    <string name="tab_liabilities_tab">Liabilities</string>
    <string name="title_activity_net_worth_report_template">NetWorthReportTemplate</string>
    <string name="action_settings">Settings</string>
    <string name="date_format">yyyy-MM-dd</string>

    <!--    net worth section-->
    <string name="new_report">New Report</string>
    <string name="past_reports">Past Reports</string>

    <string name="total_spending">Total Spending</string>

    <!--    keys-->

    <string name="net_worth_time_key">itemTime</string>
    <string name="net_worth_value_key">itemValue</string>
    <string name="net_worth_difference_key">itemDifference</string>
    <string name="budget_categories_key">budgetsCategory</string>

    <string name="report_assets_fragment_key">Report Assets Fragment</string>
    <string name="report_liabilities_fragment_key">Report Liabilities Fragment</string>

    <string name="expenses_fragments_key">ExpensesFragment</string>
    <string name="revenues_fragment_key">RevenuesFragment</string>

    <string name="transaction_fragment_key">Transaction</string>
    <string name="transaction_id_key">Id</string>
    <string name="transaction_name_key">Name</string>
    <string name="transaction_value_key">Value</string>
    <string name="transaction_category_key">Category</string>
    <string name="transaction_comments_key">Comments</string>
    <string name="transaction_date_key">Date</string>

    <string name="expenses_section_key">ExpensesSection</string>
    <string name="revenues_section_key">RevenuesSection</string>

    <string name="transaction_add_new_models_key">newModels</string>
    <string name="transaction_add_new_types_key">transactionNewTypes</string>
    <string name="budget_add_new_types_key">budgetNewTypes</string>

    <string name="add_budget_access_key">addBudget</string>
    <string name="edit_budget_access_key">editBudget</string>
    <string name="budget_access_key">budget</string>
    <string name="budget_id_key">budgetId</string>
    <string name="budget_name_id_key">budgetName</string>
    <string name="budget_total_key">budgetTotal</string>
    <string name="budget_usage_key">budgetUsage</string>
    <string name="budget_start_date_key">budgetStartDate</string>
    <string name="budget_end_date_key">budgetEndDate</string>

    <!-- spending -->

    <string name="spending_monthly_list_key">monthlySpendingList</string>
    <string name="spending_report_month_key">month</string>
    <string name="spending_categories">spendingCategories</string>
    <string name="spending_report">Spending Report</string>

    <!-- empty messages -->
    <string name="past_report_list_empty_message_1">Your do not have any net worth reports recorded</string>
    <string name="past_report_list_empty_message_2">Please record both assets and liabilities to generate a full net worth report</string>
    <string name="budget_initialization_1">Your have not set any budgets yet</string>
    <string name="budget_initialization_2">Click + to add your first budget</string>
    <string name="spending_initialization_1">Your spending reports will be displayed here</string>
    <string name="spending_initialization_2">Navigate to Transactions section to record your transactions</string>
    <string name="expenses_initialization_1">Your have not add any expense</string>
    <string name="expenses_initialization_2">Click + to add your first expense</string>
    <string name="revenues_initialization_1">Your have not add any revenue</string>
    <string name="revenues_initialization_2">Click + to add your first revenue</string>

    <!-- net worth notes -->
    <string name="net_worth_note">The empty fields will be recorded as 0</string>

</resources>
