<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="protect.Finia.Activities.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/MainPageTitleTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="#ffffff"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name"
                app:collapsedTitleGravity="center"
                app:expandedTitleGravity="center_horizontal"
                app:expandedTitleMarginTop="250dp"
                app:collapsedTitleTextAppearance="@style/AppTitleCollapsedStyle"
                app:expandedTitleTextAppearance="@style/AppTitleExpandedStyle"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/image_of_assets"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/start_page"
                    app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginEnd="28dp"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/MainMenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/TransactionOption"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="#0a7d80">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:src="@drawable/transaction"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="25dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/transaction_title"
                            android:textColor="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/transaction_description"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/BudgetOption"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="#f05424">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:src="@drawable/budget"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="25dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/budget_title"
                            android:textColor="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/budget_description"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/SpendingOption"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="#1a76ff">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="150dp"
                        android:src="@drawable/spending"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginStart="25dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/spending_title"
                            android:textColor="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/spending_description"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/NetWorthOption"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="#fdaf17">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:src="@drawable/networth"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="25dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/net_worth_title"
                            android:textSize="25sp"
                            android:textColor="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/net_worth_description"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>