<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="protect.Finia.activities.TransactionAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4156BE"
        app:layout_collapseMode="pin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="17dp">

            <ImageButton
                android:id="@+id/transaction_add_return_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="#0015314B"
                android:src="@drawable/ic_back_icon_foreground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_transaction"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <ImageButton
                    android:id="@+id/transaction_add_save_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_save_icon_foreground" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/add_transaction_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4156BE"
            app:tabSelectedTextColor="#ffffff"
            app:tabTextColor="#2196F3"
            app:tabIndicatorColor="#ffffff">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/expenses_name"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/revenues_name"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/edit_transaction_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>

</LinearLayout>